修改页面整体的内外边距以及添加购物车标题的文字背景、添加标题背景栏

--- a/frontEnd/cart.html
+++ b/frontEnd/cart.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <script type="text/javascript" src="./js/shoppingCart.js"></script>
 </head>
-<body>
-<span class="fl cart">购物车</span>
+<body class="bodyStyle">
+<div class="titleBackground"><span class="fl title">购物车</span></div>
 <div class="cfl">
-    <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=1)" float="left" width=1318px color=#FF4400 SIZE=2>
+    <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=1)" float="left" width=1307px color=#FF4400 SIZE=2>
 </div><!--分割线-->
 <br>
 <!--换行换不了！-->
