--- a/frontEnd/comment.html
+++ b/frontEnd/comment.html
@@ -7,59 +7,17 @@
     <link rel="stylesheet" type="text/css" href="../css/common.css">
     <script src="../js/comment.js"></script>
     <script src="../js/jquery-3.1.0.min.js"></script>
-
-    <!-- 图片放大样式-->
-    <style type="text/css">
-        ul, li {
-            list-style: none;
-        }
-
-        .heartPic {
-            width: 0px;
-            height: 0px;
-            margin: 0px 0 0 0;
-        }
-
-        .heartPic ul {
-            float: left;
-            width: 200px;
-        }
-
-        .heartPic ul li {
-            float: left;
-            width: 100px;
-            height: 100px;
-            padding: 2px;
-            cursor: pointer;
-        }
-
-        .heartPic ul li.on {
-            z-index: 99;
-        }
-
-        .heartPic ul li.on .in {
-            position: relative;
-            left: 0px;
-            top: 0px;
-            padding: 5px 5px 20px 5px;
-            background: #666;
-        }
-
-        .heartPic .showDiv {
-            display: block;
-        }
-    </style>
 </head>
 
-<br>                                                                        <!--空一行-->
+<body class="bodyStyle">
 
 <!--
         # 星级评分
         # star:value = 分数
 -->
-<div class="frontBackground"><span class="fl title">评价宝贝</span></div>
+<div class="titleBackground"><span class="fl title">评价宝贝</span></div>
 <div class="cfl">                                                          <!--分割线-->
-    <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=1)" float="left" width=1022px color=#FF4400 SIZE=2>
+    <HR style="FILTER: alpha(opacity=100,finishopacity=0,style=1)" float="left" width=1324px color=#FF4400 SIZE=2>
 </div>
 <!--商品信息-->
 <table class="cfl tableStyle" id="commentTable">
