调整html页面的文件位置至文件夹根目录

--- a/cart.html
+++ b/cart.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>购物车页面</title>
-    <link rel="stylesheet" type="text/css" href="../css/cart.css">
-    <link rel="stylesheet" type="text/css" href="../css/common.css">
+    <link rel="stylesheet" type="text/css" href="css/cart.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
     <script type="text/javascript" src="./js/shoppingCart.js"></script>
 </head>
 <body class="bodyStyle">
@@ -34,7 +34,7 @@
         <td class="check"><input class="check_one" type="checkbox" id="checkOne1" name="checkOne"
                                  onClick="countAll()">
             </input></td>
-        <td><img class="imgSize" src="../img/cart/1.jpg"></td>
+        <td><img class="imgSize" src="img/cart/1.jpg"></td>
         <td class="cell"><span class="goodsInfo">M4605 mimius定制15夏季新款女日系撞色拼接木耳边织带短袖T </span></td>
         <td class="price"><span id="price1" name="price">99.99</span></td>
         <td class="count">
@@ -52,7 +52,7 @@
         <td class="check"><input class="check_one" type="checkbox" id="checkOne2" name="checkOne"
                                  onClick="countAll()">
             </input></td>
-        <td><img class="imgSize" src="../img/cart/2.jpg"></td>
+        <td><img class="imgSize" src="img/cart/2.jpg"></td>
         <td class="cell"><span class="goodsInfo">M4625 mimius定制15夏新款女优雅印花名媛篷篷裙半身裙长裙 </span></td>
         <td class="price"><span id="price2" name="price">79.99</span></td>
         <td class="count">
@@ -70,7 +70,7 @@
         <td class="check"><input class="check_one" type="checkbox" id="checkOne3" name="checkOne"
                                  onClick="countAll()">
             </input></td>
-        <td><img class="imgSize" src="../img/cart/3.jpg"></td>
+        <td><img class="imgSize" src="img/cart/3.jpg"></td>
         <td class="cell"><span class="goodsInfo">M4544 mimius定制15夏新品女马卡龙百搭清新蝴蝶结短袖上衣T恤女 </span></td>
         <td class="price"><span id="price3" name="price">89.99</span></td>
         <td class="count">
@@ -88,7 +88,7 @@
         <td class="check"><input class="check_one" type="checkbox" id="checkOne4" name="checkOne"
                                  onClick="countAll()">
             </input></td>
-        <td><img class="imgSize" src="../img/cart/4.jpg"></td>
+        <td><img class="imgSize" src="img/cart/4.jpg"></td>
         <td class="cell"><span class="goodsInfo">M4702 mimius15夏新品透视两件套木耳边气质无袖雪纺衬衫 </span></td>
         <td class="price"><span id="price4" name="price">94.99</span></td>
         <td class="count">
