--- a/comment.html
+++ b/comment.html
@@ -3,10 +3,10 @@
 <head>
     <title> 收获评论页面 </title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/comment.css">
-    <link rel="stylesheet" type="text/css" href="../css/common.css">
-    <script src="../js/comment.js"></script>
-    <script src="../js/jquery-3.1.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/comment.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <script src="js/comment.js"></script>
+    <script src="js/jquery-3.1.0.min.js"></script>
 </head>
 
 <body class="bodyStyle">
@@ -32,7 +32,7 @@
             <ul>
                 <li>
                     <div class="in">                                    <!--图片（可放大）-->
-                        <img width="100" height="100" src="../img/comment/plaidShirt.jpg"/>
+                        <img width="100" height="100" src="img/comment/plaidShirt.jpg"/>
                     </div>
                 </li>
 
